# tinyhetmoe

./: .gitignore  CHECKPOINTS.md  DESIGN.md  JOURNAL.md  LICENSE  README.md  test_encoder_node.mjs  test_stitch_node.mjs
blog/: 0-why-tinyhetmoe.md  1-getting-qat-to-converge.md  2-variable-length-and-long-context.md  3-restart-helps-convergence.md  4-the-dream.md  5-the-dream-instantiated.md  README.md
data/: meaning_axes_132.npy  meaning_axis_names.json
docs/: README.md  app.js  axis_descriptions.json  blog.html  index.html  journal.html  prose.css  prose.js  stitch.html  stitch.js  stitch_v7.html  stitch_v7.js  style.css  test_encoder.mjs  test_longcontext.mjs  test_node.mjs  tiny.meta.json  vocab.json
docs/stitch_v66/: decode.json  prompts.json  stitch.json
docs/stitch_v7/: decode.json  stitch.json  tiny_hetmoe_wasm.d.ts  tiny_hetmoe_wasm.js  tiny_hetmoe_wasm_bg.wasm
docs/wasm-pkg/: README.md  (+5 more)
docs/wasm-pkg-node/: tiny_hetmoe_wasm_bg.wasm
model/: README.md  tiny_hetmoe.py
scripts/: README.md  batch_2.sh  batch_3.sh  build_axis_glossary.py  build_decode_lookup.py  build_encode_lookup.py  build_qwen_encoder_data.py  build_qwen_encoder_v7.py  build_stitch_bundle.py  build_stitch_demo_data.py  build_stitch_v7.py  build_tool_corpus.py  check_model.py  distill_all.sh  dpq_compress.py  dump_expert.py  dump_layer0.py  dump_test_tokenizations.py  eval_extrapolation.py  eval_stitching.py  export_model.py  export_trace.py  filter_tool_for_classifier.py  launch_v7.sh  make_meaning_axes.py  make_unified_meaning_axes.py  pad_checkpoint_vocab.py  patch_vocab_for_chatml.py  prepare_data.py  prepare_data_unified.py  prepare_data_v7.py  prepare_data_wikitext.py  probe_v7.py  stitch_demo_v66.py  tokenize_tool_corpus.py  train_domain_classifier.py  train_domain_classifier_v7.py  v7_watcher.sh  val_distill.py  val_distill_oov.py  (+7 more)
tokenizer/: README.md  unified_vocab.json
training/: README.md  distill_v7.py  train_tiny_hetmoe.py
ui/: app.js  bench_node.mjs  decode_lookup.json  encode_lookup.json  generate_test.mjs  index.html  smoke.html  style.css  trace_demo.json
wasm/: Cargo.toml  REFERENCE_v3_1.md
wasm/src/: forward.rs  lib.rs  main.rs  model.rs  stitch.rs  tensor.rs  wasm_api.rs  wasm_api_stitch.rs
(+27 files in other folders)
